optimizacion de imageneese

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -26,7 +26,7 @@
     --sombra-modoOscuro: 0 0 15px 8px #8100fa80;
     --img-fotoHome: url(../imagenes/fotodlr.png) no-repeat center;
     --img-logo: url(../imagenes/logo.svg) no-repeat center;
-    --img-inmowasi: url(../imagenes/logos/inmowasi.svg) no-repeat center;
+    --img-inmowasi: url(../imagenes/logos/inmowasi.webp) no-repeat center;
     --img-tavo: url(../imagenes/logos/tavo.png) no-repeat center;
     --img-palmeras: url(../imagenes/logos/laspalmeras.png) no-repeat center;
     --img-modoOscuro: url(../imagenes/moon.jpg) no-repeat center;
